--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   url_launcher: ^6.3.0
   flutter_native_splash: ^2.4.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
