--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,11 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+    
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 flutter {
