--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,9 +92,9 @@ flutter_native_splash:
   # parameters from above. If the image_dark parameter is specified, color_dark or
   # background_image_dark must be specified.  color_dark and background_image_dark cannot both be
   # set.
-  color_dark: "#16161d"
+  color_dark: "#000000"
   #background_image_dark: "assets/dark-background.png"
-  image_dark: assets/splash.png
+  image_dark: assets/dark-splash.png
   #branding_dark: assets/dart_dark.png
 
   # From Android 12 onwards, the splash screen is handled differently than in previous versions.
